# django_poetry

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  test_mac.sh
djangoPoetry/: asgi.py  settings.py  urls.py  wsgi.py
