[tool.poetry]
name = "djangopoetry"
version = "0.1.0"
description = ""
authors = ["sungwookoo <sungwookoo.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"
django-ninja = "0.16.1"
black = "22.3.0"
django-stubs = "1.9.0"
mypy = "0.931"
isort = "5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

# mypy
[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.9
strict = true # argument, return type hint check

# mypy - setting by module [[tool.mypy.overrides]]
[[tool.mypy.overrides]]
module = "*.migrations.*" # all migration file
ignore_errors = true # migration files are not checked for errors

[[tool.mypy.overrides]]
module = "manage" # manage.py
ignore_errors = true # manage.py file is not checked for errors

[tool.django-stubs]
django_settings_module = "djangoPoetry.settings" # set django_setting_module path

[toll.isort]
profile = "black" # notify isort that it is using with black